fixed x overflow issue. Styled contact form.

--- a/src/Assets/style.css
+++ b/src/Assets/style.css
@@ -11,11 +11,24 @@ h3 {
   font-family: "Bungee", cursive;
 }
 
+#root {
+  background-color: black;
+  overflow-x: hidden;
+}
+
+/* set body text to white and background image */
+body {
+  color: white;
+  background-color: black;
+}
+
+/* NAVBAR ITEMS */
+
 #navbar {
   top: 0;
   display: flex;
   position: fixed;
-  padding: 1rem;
+  padding: .5rem;
   left: 0;
   width: 100%;
   margin-bottom: 2rem;
@@ -29,18 +42,10 @@ h3 {
 }
 
 .dropdown {
-  margin-left: 2%;
+  margin-left: 1.5%;
 }
 
-#root {
-  background-color: black;
-}
-
-/* set body text to white and background image */
-body {
-  color: white;
-  background-color: black;
-}
+/* ABOUT SECTION ITEMS */
 
 /* positioning the landing section and items */
 #landing {
@@ -60,6 +65,20 @@ body {
   flex-wrap: wrap-reverse;
 }
 
+
+#landing figure {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* set blending mode for my picture and max width/height */
+#landing .col-lg-6 img {
+  mix-blend-mode: screen;
+  max-width: 85%;
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
 .container {
   display: flex;
   align-self: flex-end;
@@ -69,6 +88,8 @@ body {
   flex-wrap: wrap;
   border-radius: 15px;
 }
+
+/* WORK SECTION */
 
 .container-fluid {
   margin-top: 5.5%;
@@ -82,19 +103,6 @@ body {
 
 .container h2 {
   line-height: 4rem;
-}
-
-#landing figure {
-  display: flex;
-  justify-content: flex-end;
-}
-
-/* set blending mode for my picture and max width/height */
-#landing .col-lg-6 img {
-  mix-blend-mode: screen;
-  max-width: 85%;
-  display: flex;
-  flex-wrap: wrap-reverse;
 }
 
 /* the following blocks control the cards and layout of the work section */
@@ -125,14 +133,24 @@ body {
   margin-top: 0%;
 }
 
+/* CONTACT SECTION */
+
+.formContainer {
+  margin-top: 5.5%;
+  margin-left: 1.5%;
+}
+
 .contactForm {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .contactForm h2 {
   color: white;
 }
+
+/* FOOTER SECTION */
 
 .footer{
   margin-top: 1rem;
@@ -145,7 +163,7 @@ body {
 }
 
 /* set background and landing area to resize for better mobile experience */
-/* @media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px) {
   body {
     background-size: 175%;
     background-color: black;
@@ -154,4 +172,4 @@ body {
   h1 {
     font-size: 1.25rem;
   }
-} */
+}
